# lilly

./: .env.example  .gitignore  Caddyfile  Cargo.toml  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/instructions/: code-review.instructions.md  rust-backend.instructions.md  svelte-frontend.instructions.md  testing.instructions.md
.github/workflows/: ci.yml  main.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260308000001_create_users.sql  20260308000002_seed_demo_user.sql  20260315000001_add_email_verification.sql  20260315000002_create_refresh_tokens.sql  20260315000003_add_unique_constraints.sql  20260315000004_add_user_roles.sql  20260315000005_create_series_and_issues.sql  20260315000006_create_import_jobs.sql  20260315000007_fix_timestamp_to_datetime.sql  20260316000001_fix_remaining_timestamp_columns.sql  20260316000002_add_issue_metadata_columns.sql  20260316000003_normalize_issue_metadata.sql  20260322000001_create_collection_entries.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/db/: collection.rs  import_jobs.rs  issues.rs  mod.rs  refresh_tokens.rs  series.rs  users.rs
backend/src/models/: collection.rs  mod.rs  series.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  collection.rs  health.rs  mod.rs  series.rs
backend/src/services/: email.rs  mod.rs
docs/: architecture.md  components.json  design-tokens.json  implementation-plan.md  requirements.md  screens.json  uxdesign.md
frontend/: .prettierignore  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: admin-import.spec.ts  collection-a11y.spec.ts  collection.spec.ts  login-a11y.spec.ts  login.spec.ts  register-a11y.spec.ts  register.spec.ts
frontend/src/: app.css  app.html
frontend/tests/: admin-api.test.ts  admin-import-detail-page.test.ts  admin-import-page.test.ts  admin-layout.test.ts  admin-series-page.test.ts  auth-api.test.ts  auth-store.test.ts  collection-add-page.test.ts  collection-api.test.ts  collection-components.test.ts  collection-filter-bar.test.ts  collection-page.test.ts  dashboard-page.test.ts  issue-detail-page.test.ts  issue-detail-sheet.test.ts  layout.test.ts  login-page.test.ts  login-query-params.test.ts  page-load.test.ts  password-strength.test.ts  privacy-page.test.ts  register-page.test.ts  series-api.test.ts  series-page.test.ts  (+1 more)
importer/: Cargo.toml
importer-core/: Cargo.toml
importer-core/src/: adapter.rs  lib.rs  progress.rs  types.rs
importer-core/src/adapters/: maddrax.rs  mod.rs
(+30 files in other folders)
