[package]
name = "lilly-backend"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
sha2 = "0.10"
rand = "0.9"
zxcvbn = "3"
axum-extra = { version = "0.10", features = ["cookie"] }
hex = "0.4"
time = "0.3"
lilly-importer-core = { path = "../importer-core" }
