[package]
name = "lilly-importer-core"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
urlencoding = "2"
